<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ValorTotalFragment">

    <ImageView
        android:id="@+id/ivCarrinho"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/desc_carrinho"
        android:src="@drawable/carrinho"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvValorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_total"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCarrinho"/>
    <Button
        android:id="@+id/botaoNovoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/verm_escuro"
        android:text="@string/novo_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvValorTotal"/>

    <Button
        android:id="@+id/botaoVerProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/verde_claro"
        android:text="@string/ver_produtos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botaoNovoProduto" />

</androidx.constraintlayout.widget.ConstraintLayout>