<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.detalhe_produto.DetalheFragment">

    <ImageView
        android:id="@+id/ivCarrinho"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/desc_carrinho"
        android:src="@drawable/carrinho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/nome_produto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCarrinho"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvQtdProduto"/>
    <TextView
        android:id="@+id/tvQtdProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qtd"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCarrinho"/>
    <TextView
        android:id="@+id/tvValorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQtdProduto"/>

    <TextView
        android:id="@+id/tvReceita"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/receita"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValorProduto"
        app:layout_constraintBottom_toTopOf="@id/ivIconeFav"/>

    <ImageView
        android:id="@+id/ivIconeFav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/ic_favoritar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReceita" />

</androidx.constraintlayout.widget.ConstraintLayout>